adpat structure to new Message sending architecture (GameMessage)